# keyboard-switch

./: README.md  kbswitch.py  setup.cfg
keyboard_switch/: kbswitch.py
