[metadata]
# replace with your username:
name = keyboard-switch
version = 0.1.1
author = Félix Desmaretz
author_email = felix.desmaretz@protonmail.com
description = Simple script written in Python to change keyboard layout on linux by using setxkbmap. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firgaty/keyboard-switch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts=
    kbswitch=keyboard_switch.kbswitch:main